# hs-poly1305

./: README.md  poly1305.cabal
benchmarks/: bench1.hs
src/Crypto/MAC/: Poly1305.hs
src/cbits/: poly1305.c
src/cbits/include/: poly1305.h
tests/: properties.hs
